--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,13 @@
+server:
+  port: 8084
+
 spring:
   application:
     name: WELCOME-SERVICE
 
-  eureka:
-    client:
-      register-with-eureka: true
-      fetch-registry: true
-      service-url:
-        defaultZone : http://localhost:8761/eureka/
-    instance :
-      hostname : localhost
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone : http://localhost:8761/eureka/
